# FEM2D

./: .gitignore  FEM2DF15.FOR  membrane.inp
Python/: README.md  compare_modal_solvers.py  compare_solvers.py  fem2d_validation_suite.ipynb  plate_modal_python.py  plate_vibration_fortran_runner.py  plate_vibration_python.py  pyproject.toml
Python/examples/: example_plate.py
Python/fem2d.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Python/src/: assemble.py  boundary.py  driver.py  elements.py  io.py  material.py  mesh.py  plate_dynamic_test.ipynb  post.py  solver.py
Python/tests/: test_assemble.py  test_assembly.py  test_boundary.py  test_dynamic.py  test_elements.py  test_end_to_end.py  test_integration.py  test_material.py  test_mesh.py  test_plate.py  test_solver.py
fortran_reference/: FEM2DF15.FOR
inputs/: 2DEXMPL.INP  FEM2DCNV.INP  cantilever_test.inp  fortran_plate_dynamic_verify.inp  natural_vibration_rect10_fortran.inp  natural_vibration_rect10_python.inp  plate_vibration_10nodes.inp  plate_vibration_5nodes.inp  python_dynamic_plate_proxy.inp  rect_plate_dynamic.inp  rect_plate_eigen_big.inp  rect_plate_static_big.inp  rect_plate_transient_big.inp  test_dynamic.inp  test_dynamic_small.inp
outputs/: natural_vibration_rect10_python.txt  plate_vibration_5nodes_python.txt  plate_vibration_python_from_notebook.txt  rect_plate_eigen_big_python_modal.txt  rect_plate_static_big_python.txt  rect_plate_transient_big_python.txt
