[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fem2d"
version = "0.1.0"
description = "2D Finite Element Method solver"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["fem", "finite-element", "2d"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=6.0", "black", "flake8"]

[project.urls]
Homepage = "https://github.com/yourusername/fem2d"
Repository = "https://github.com/yourusername/fem2d.git"

[tool.setuptools]
packages = ["src"]
